--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <div class="modsList"></div>
         </div>
         <div id="playerController">
-            <div id="timeContainer" onclick="copyUrlToClipboard()">
+            <div id="timeContainer" onclick="showPopup()">
                 <span id="minute2digit" class="digit">0</span>
                 <span id="minute1digit" class="digit">0</span>
                 <span>:</span>
@@ -148,10 +148,16 @@
                 <input id="progress" type="range" min="0" step="1" value="0" oninput="setAudioTime(this)"
                     onkeydown="event.preventDefault()">
             </div>
-
-
             <!-- <input id="volumeSlider" type="range" min="0" max="0.4" step="0.01" value="0.1" oninput="setAudioVolume(this)"> -->
         </div>
+        <dialog class="seekTo">
+            <div class="row">
+                <div class="rowLabel">Jump to</div><input id="jumpToTime" type="text" onblur="updateTimestamp(this.value)">
+            </div>
+            <div class="row">
+                <div class="rowLabel">Preview URL</div><input id="previewURL" type="text" readonly onclick="copyUrlToClipboard()">
+            </div>
+        </dialog>
     </div>
     <div class="loading">
         <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="90px" height="90px">
