--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         </div>
         <dialog class="seekTo">
             <div class="row">
-                <div class="rowLabel">Jump to</div><input id="jumpToTime" type="text" onblur="updateTimestamp(this.value)">
+                <div class="rowLabel">Jump to</div><input id="jumpToTime" type="text">
             </div>
             <div class="row">
                 <div class="rowLabel">Preview URL</div><input id="previewURL" type="text" readonly onclick="copyUrlToClipboard()">
