Added Kiai indication in Progress Bar and Timing Panel

--- a/index.html
+++ b/index.html
@@ -173,22 +173,7 @@
             <div class="panelRow">
                 <button class="slideToggleButton" onclick="toggleTimingPanel()">timings</button>
                 <div class="timingPanel panel">
-                    <!-- <div class="beatStepPoint timingPoint">
-                        <div class="timestamp">00:00:010</div>
-                        <div class="timingContent">
-                            <div class="timingFlair"></div>
-                            <div class="timingValue">180 BPM</div>
-                        </div>
-                    </div>
-                    <div class="svPoint timingPoint current">
-                        <div class="timestamp">00:00:012</div>
-                        <div class="timingContent">
-                            <div class="timingFlair"></div>
-                            <div class="timingValue">2.00x</div>
-                            <div class="timingValue">S:C1</div>
-                            <div class="timingValue">100%</div>
-                        </div>
-                    </div> -->
+                    <div class="highlightPoint">_</div>
                 </div>
             </div>
             <div class="panelRow">
