Disable showing timing panel on start to reduce lags

--- a/index.html
+++ b/index.html
@@ -171,13 +171,13 @@
                 </button>
             </div>
             <div class="panelRow">
-                <button class="slideToggleButton" onclick="toggleTimingPanel()">timings</button>
+                <button class="slideToggleButton timings" onclick="toggleTimingPanel()">timings</button>
                 <div class="timingPanel panel">
                     <div class="highlightPoint">_</div>
                 </div>
             </div>
             <div class="panelRow">
-                <button class="slideToggleButton" onclick="toggleMetadataPanel()">metadata</button>
+                <button class="slideToggleButton metadatas" onclick="toggleMetadataPanel()">metadata</button>
                 <div class="metadataPanel panel show">
                     <div class="metadataRow">
                         <div class="label">artist</div>
