Disable timing panel due to performance issue

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 </div>
             </dialog>
         </div>
-        <div class="sidePanel">
+        <div class="sidePanel slideOutAnim">
             <div class="closeRow">
                 map info
                 <button class="closeSidepanel" onclick="closeSidePanel()">
@@ -171,7 +171,7 @@
                 </button>
             </div>
             <div class="panelRow">
-                <button class="slideToggleButton timings" onclick="toggleTimingPanel()">timings</button>
+                <button class="slideToggleButton timings" onclick="toggleTimingPanel()" disabled>timings (disabled due to performance issue)</button>
                 <div class="timingPanel panel">
                     <div class="highlightPoint">_</div>
                 </div>
