Disable opening side panel by default

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 </div>
             </dialog>
         </div>
-        <div class="sidePanel slideOutAnim">
+        <div class="sidePanel">
             <div class="closeRow">
                 map info
                 <button class="closeSidepanel" onclick="closeSidePanel()">
