Added timeline timing flair

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 </button>
             </div>
             <div class="panelRow">
-                <button class="slideToggleButton timings" onclick="toggleTimingPanel()" disabled>timings (disabled due to performance issue)</button>
+                <button class="slideToggleButton timings" onclick="toggleTimingPanel()">timings</button>
                 <div class="timingPanel panel">
                     <div class="highlightPoint">_</div>
                 </div>
