Kinda restore greenlines in timing panels

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <div class="contentWrapper">
         <div id="playerWrapper">
             <div id="playerContainer">
-                <div id="background"></div>
+                <img id="background" />
                 <div id="overlay"></div>
                 <!-- <canvas id="canvas" width="512" height="384"></canvas> -->
             </div>
