Added option to hide greenline info on timeline

--- a/index.html
+++ b/index.html
@@ -387,6 +387,10 @@
                     <input type="range" id="softoffset" name="softoffset" min="-100" max="100" step="1"
                         oninput='setOffset(this);' value="0">
                 </div>
+                <div class="selection">
+                    <label for="showGreenLine">show SV info on timeline</label>
+                    <input type="checkbox" id="showGreenLine" name="showGreenLine" onchange='handleCheckBox(this);'>
+                </div>
             </div>
         </div>
         <div class="section">
