forgor to unshow metadata panel on default

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             </div>
             <div class="panelRow">
                 <button class="slideToggleButton metadatas" onclick="toggleMetadataPanel()">metadata</button>
-                <div class="metadataPanel panel show">
+                <div class="metadataPanel panel">
                     <div class="metadataRow">
                         <div class="label">artist</div>
                         <div class="value meta-artist"></div>
