--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
     <script src="./scripts/Skinning.js"></script>
     <script src="./scripts/Texture.js"></script>
     <script src="./scripts/Cursor.js"></script>
+    <script src="./scripts/Progress.js"></script>
+    <script src="./scripts/Timestamp.js"></script>
     <script src="./scripts/Game.js"></script>
     <script src="./scripts/Audio.js"></script>
     <script src="./scripts/HitSound.js"></script>
@@ -123,15 +125,6 @@
             </div>
             <div id="playerController">
                 <div id="timeContainer" onclick="showPopup()">
-                    <span id="minute2digit" class="digit">0</span>
-                    <span id="minute1digit" class="digit">0</span>
-                    <span>:</span>
-                    <span id="second2digit" class="digit">0</span>
-                    <span id="second1digit" class="digit">0</span>
-                    <span>:</span>
-                    <span id="millisecond3digit" class="digit">0</span>
-                    <span id="millisecond2digit" class="digit">0</span>
-                    <span id="millisecond1digit" class="digit">0</span>
                 </div>
                 <div class="timingContainer" onclick="toggleSidePanel('timing')">
                     <div class="BPM">0BPM</div>
@@ -146,11 +139,6 @@
                     <button id="nextButton" onclick="go(null, true)"></button>
                 </div>
                 <div class="progressBarContainer">
-                    <div class="timingPointsContainer">
-                        <img src="static/empty.png">
-                    </div>
-                    <input id="progress" type="range" min="0" step="1" value="0" oninput="setAudioTime(this)"
-                        onkeydown="event.preventDefault()">
                 </div>
                 <!-- <input id="volumeSlider" type="range" min="0" max="0.4" step="0.01" value="0.1" oninput="setAudioVolume(this)"> -->
             </div>
