--- a/index.html
+++ b/index.html
@@ -25,48 +25,45 @@
     <script src="./lib/lzma_worker.js"></script>
     <script src="./lib/leb128.js"></script>
     <script src="./lib/osr-parser.js"></script>
-    <script src="./deps/dom-to-image.min.js"></script>
-    <script src="./deps/countUp.js"></script>
     <script src="./deps/pixi.min.js"></script>
-    <script src="./scripts/CubicBezier.js"></script>
     <script src="./scripts/GlobalVariables.js"></script>
     <script src="./scripts/Database.js"></script>
-    <script src="./scripts/Skinning.js"></script>
-    <script src="./scripts/Texture.js"></script>
-    <script src="./scripts/Cursor.js"></script>
-    <script src="./scripts/Progress.js"></script>
-    <script src="./scripts/Timestamp.js"></script>
-    <script src="./scripts/Game.js"></script>
-    <script src="./scripts/Audio.js"></script>
+    <script src="./scripts/Skinning.js" type="module"></script>
+    <script src="./scripts/Texture.js" type="module"></script>
+    <script src="./scripts/Cursor.js" type="module"></script>
+    <script src="./scripts/Progress.js" type="module"></script>
+    <script src="./scripts/Timestamp.js" type="module"></script>
+    <script src="./scripts/Game.js" type="module"></script>
+    <script src="./scripts/Audio.js" type="module"></script>
     <script src="./scripts/HitSound.js"></script>
     <script src="./scripts/Judgement.js"></script>
-    <script src="./scripts/HitObjects/ApproachCircle.js"></script>
-    <script src="./scripts/HitObjects/NumberSprite.js"></script>
-    <script src="./scripts/HitObjects/HitCircle.js"></script>
-    <script src="./scripts/HitObjects/ReverseArrow.js"></script>
-    <script src="./scripts/HitObjects/SliderBall.js"></script>
-    <script src="./scripts/HitObjects/SliderTick.js"></script>
-    <script src="./scripts/HitObjects/Slider.js"></script>
-    <script src="./scripts/HitObjects/Spinner.js"></script>
-    <script src="./scripts/HitObjects/SliderMesh.js"></script>
-    <script src="./scripts/HitObjects/ObjectsController.js"></script>
-    <script src="./scripts/Beatmap.js"></script>
-    <script src="./scripts/BeatmapFile.js"></script>
+    <script src="./scripts/HitObjects/ApproachCircle.js" type="module"></script>
+    <script src="./scripts/HitObjects/NumberSprite.js" type="module"></script>
+    <script src="./scripts/HitObjects/HitCircle.js" type="module"></script>
+    <script src="./scripts/HitObjects/ReverseArrow.js" type="module"></script>
+    <script src="./scripts/HitObjects/SliderBall.js" type="module"></script>
+    <script src="./scripts/HitObjects/SliderTick.js" type="module"></script>
+    <script src="./scripts/HitObjects/Slider.js" type="module"></script>
+    <script src="./scripts/HitObjects/Spinner.js" type="module"></script>
+    <script src="./scripts/HitObjects/SliderMesh.js" type="module"></script>
+    <script src="./scripts/HitObjects/ObjectsController.js" type="module"></script>
+    <script src="./scripts/Beatmap.js" type="module"></script>
+    <script src="./scripts/BeatmapFile.js" type="module"></script>
     <script src="./scripts/ScoreParser.js"></script>
-    <script src="./scripts/Utils.js"></script>
-    <script src="./scripts/Timeline/Timeline.js"></script>
-    <script src="./scripts/Timeline/DragWindow.js"></script>
-    <script src="./scripts/Timeline/BeatLines.js"></script>
-    <script src="./scripts/Timeline/HitCircle.js"></script>
-    <script src="./scripts/Timeline/NumberSprite.js"></script>
-    <script src="./scripts/Timeline/ReverseArrow.js"></script>
-    <script src="./scripts/Timeline/Slider.js"></script>
-    <script src="./index.js" defer></script>
-    <script src="./scripts/DragWindow.js" defer></script>
-    <script src="./scripts/Settings.js" defer></script>
-    <script src="./scripts/DragDrop.js" defer></script>
-    <script src="./scripts/InputBar.js" defer></script>
-    <script src="./scripts/ProgressBar.js" defer></script>
+    <script src="./scripts/Utils.js" type="module"></script>
+    <script src="./scripts/Timeline/Timeline.js" type="module"></script>
+    <script src="./scripts/Timeline/DragWindow.js" type="module"></script>
+    <script src="./scripts/Timeline/BeatLines.js" type="module"></script>
+    <script src="./scripts/Timeline/HitCircle.js" type="module"></script>
+    <script src="./scripts/Timeline/NumberSprite.js" type="module"></script>
+    <script src="./scripts/Timeline/ReverseArrow.js" type="module"></script>
+    <script src="./scripts/Timeline/Slider.js" type="module"></script>
+    <script src="./index.js" type="module" defer></script>
+    <script src="./scripts/DragWindow.js" type="module" defer></script>
+    <script src="./scripts/Settings.js" type="module" defer></script>
+    <script src="./scripts/DragDrop.js" type="module" defer></script>
+    <script src="./scripts/InputBar.js" type="module" defer></script>
+    <script src="./scripts/ProgressBar.js" type="module" defer></script>
     <script src="./scripts/Record.js" defer></script>
     <script src="./scripts/Notification.js" defer></script>
     <script src="./scripts/SidePanel.js" defer></script>
@@ -77,9 +74,9 @@
     </div>
     <div id="inputContainer">
         <div class="legacyPart">
-            <button id="settingsButton" onclick="openMenu()"></button>
+            <button id="settingsButton"></button>
             <div id="inputWrapper">
-                <input id="mapInput" type="text" placeholder=" " value="4135190" onkeydown="mapInputEnter(this)">
+                <input id="mapInput" type="text" placeholder=" " value="4135190">
             </div>
             <button id="submit">Load</button>
             <!-- <button id="record">Record</button> -->
@@ -91,8 +88,8 @@
     </div>
     <div class="timelineContainer">
         <div class="zoom">
-            <button onclick="changeZoomRate(1, this)"><img src="static/plus.png"></button>
-            <button onclick="changeZoomRate(-1, this)"><img src="static/minus.png"></button>
+            <button class="plus"><img src="static/plus.png"></button>
+            <button class="minus"><img src="static/minus.png"></button>
         </div>
         <div class="timeline"></div>
     </div>
@@ -124,19 +121,17 @@
                 <div class="modsList"></div>
             </div>
             <div id="playerController">
-                <div id="timeContainer" onclick="showPopup()">
-                </div>
+                <div id="timeContainer"></div>
                 <div class="timingContainer" onclick="toggleSidePanel('timing')">
                     <div class="BPM">0BPM</div>
                     <div class="SV">
                         <div class="multiplier">1.00x</div>
                     </div>
                 </div>
-                <button class="infoButton" onclick="toggleSidePanel('metadata')"><img src="/static/info.png"></button>
                 <div class="buttonsContainer">
-                    <button id="prevButton" onclick="go(null, false)"></button>
-                    <button id="playButton" onclick="playToggle(this)"></button>
-                    <button id="nextButton" onclick="go(null, true)"></button>
+                    <button id="prevButton"></button>
+                    <button id="playButton"></button>
+                    <button id="nextButton"></button>
                 </div>
                 <div class="progressBarContainer">
                 </div>
@@ -147,8 +142,7 @@
                     <div class="rowLabel">Jump to</div><input id="jumpToTime" type="text">
                 </div>
                 <div class="row">
-                    <div class="rowLabel">Preview URL</div><input id="previewURL" type="text" readonly
-                        onclick="copyUrlToClipboard()">
+                    <div class="rowLabel">Preview URL</div><input id="previewURL" type="text" readonly>
                 </div>
             </dialog>
         </div>
@@ -248,8 +242,7 @@
                 <div class="radioSel">
                     <input type="radio" name="mirror" id="custom" value="custom">
                     <label for="custom">
-                        <input type="text" id="custom-mirror" placeholder="mirror download url format"
-                            onblur="setCustomMirror(this)">
+                        <input type="text" id="custom-mirror" placeholder="mirror download url format">
                     </label>
 
                 </div>
@@ -260,7 +253,7 @@
             <div class="description">change gameplay appearance</div>
             <div class="list skin">
                 <div class="selection">
-                    <button class="skinSelector" onclick="openDialog()">Skin</button>
+                    <button class="skinSelector">Skin</button>
                     <dialog id="skinDropdown">
                         <div class="skinSelection" data-skin-id="argon">
                             <button class="skinName">Argon</button>
@@ -281,15 +274,15 @@
                 </div>
                 <div class="selection">
                     <label for="snaking">snaking sliders</label>
-                    <input type="checkbox" id="snaking" name="snaking" onchange='handleCheckBox(this);' checked>
+                    <input type="checkbox" id="snaking" name="snaking" checked>
                 </div>
                 <div class="selection">
                     <label for="hitAnim">hit animations</label>
-                    <input type="checkbox" id="hitAnim" name="hitAnim" onchange='handleCheckBox(this);' checked>
+                    <input type="checkbox" id="hitAnim" name="hitAnim" checked>
                 </div>
                 <div class="selection">
                     <label for="ignoreSkin">ignore beatmap colours</label>
-                    <input type="checkbox" id="ignoreSkin" name="ignoreSkin" onchange='handleCheckBox(this);'>
+                    <input type="checkbox" id="ignoreSkin" name="ignoreSkin">
                 </div>
             </div>
         </div>
@@ -299,8 +292,7 @@
                 <div class="selection slider">
                     <label for="dim">background dim</label>
                     <div id="bgDimVal" class="val">80%</div>
-                    <input type="range" id="dim" name="dim" min="0" max="1" step="0.01"
-                        oninput='setBackgroundDim(this);' value="0.8">
+                    <input type="range" id="dim" name="dim" min="0" max="1" step="0.01" value="0.8">
                 </div>
                 <!-- <div class="selection slider">
                     <label for="blur">background blur</label>
@@ -316,20 +308,17 @@
                 <div class="selection slider">
                     <label for="master">master volume</label>
                     <div id="masterVal" class="val">100%</div>
-                    <input type="range" id="master" name="master" min="0" max="1" step="0.01"
-                        oninput='setMasterVolume(this);' value="1">
+                    <input type="range" id="master" name="master" min="0" max="1" step="0.01" value="1">
                 </div>
                 <div class="selection slider">
                     <label for="music">music volume</label>
                     <div id="musicVal" class="val">25%</div>
-                    <input type="range" id="music" name="music" min="0" max="1.0" step="0.01"
-                        oninput='setAudioVolume(this);' value="0.25">
+                    <input type="range" id="music" name="music" min="0" max="1.0" step="0.01" value="0.25">
                 </div>
                 <div class="selection slider">
                     <label for="effect">effect volume</label>
                     <div id="effectVal" class="val">25%</div>
-                    <input type="range" id="effect" name="effect" min="0" max="0.4" step="0.004"
-                        oninput='setEffectVolume(this);' value="0.1">
+                    <input type="range" id="effect" name="effect" min="0" max="0.4" step="0.004" value="0.1">
                 </div>
             </div>
         </div>
@@ -338,23 +327,23 @@
             <div class="list">
                 <div class="selection">
                     <label for="HD">hidden</label>
-                    <input type="checkbox" id="HD" name="HD" onchange='handleCheckBox(this);'>
+                    <input type="checkbox" id="HD" name="HD">
                 </div>
                 <div class="selection">
                     <label for="HR">hard rock</label>
-                    <input type="checkbox" id="HR" name="HR" onchange='handleCheckBox(this);'>
+                    <input type="checkbox" id="HR" name="HR">
                 </div>
                 <div class="selection">
                     <label for="EZ">easy</label>
-                    <input type="checkbox" id="EZ" name="EZ" onchange='handleCheckBox(this);'>
+                    <input type="checkbox" id="EZ" name="EZ">
                 </div>
                 <div class="selection">
                     <label for="DT">double time</label>
-                    <input type="checkbox" id="DT" name="DT" onchange='handleCheckBox(this);'>
+                    <input type="checkbox" id="DT" name="DT">
                 </div>
                 <div class="selection">
                     <label for="HT">half time</label>
-                    <input type="checkbox" id="HT" name="HT" onchange='handleCheckBox(this);'>
+                    <input type="checkbox" id="HT" name="HT">
                 </div>
             </div>
         </div>
@@ -364,8 +353,7 @@
                 <div class="selection slider">
                     <label for="beat">beatsnap divisor</label>
                     <div id="beatVal" class="val">1/4</div>
-                    <input type="range" id="beat" name="beat" min="1" max="16" step="1"
-                        oninput='setBeatsnapDivisor(this);' value="4">
+                    <input type="range" id="beat" name="beat" min="1" max="16" step="1" value="4">
                 </div>
                 <div class="selection slider">
                     <label for="softoffset">offset</label>
@@ -373,12 +361,11 @@
                         <div class="sign">-</div> &nbsp;late ---- music ---- early <div class="sign">+</div>
                     </div>
                     <div id="softoffsetVal" class="val">0ms</div>
-                    <input type="range" id="softoffset" name="softoffset" min="-100" max="100" step="1"
-                        oninput='setOffset(this);' value="0">
+                    <input type="range" id="softoffset" name="softoffset" min="-100" max="100" step="1" value="0">
                 </div>
                 <div class="selection">
                     <label for="showGreenLine">show SV info on timeline</label>
-                    <input type="checkbox" id="showGreenLine" name="showGreenLine" onchange='handleCheckBox(this);'>
+                    <input type="checkbox" id="showGreenLine" name="showGreenLine">
                 </div>
             </div>
         </div>
