Migrate Global Variables

--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
     <script src="./lib/zip-fs-full.js"></script>
     <script src="./lib/osujs.js"></script>
     <script src="./lib/lzma_worker.js"></script>
-    <script src="./lib/leb128.js"></script>
-    <script src="./lib/osr-parser.js"></script>
-    <script src="./deps/pixi.min.js"></script>
-    <script src="./scripts/GlobalVariables.js"></script>
+    <script src="./lib/leb128.js" type="module"></script>
+    <script src="./lib/osr-parser.js" type="module"></script>
+    <script src="./scripts/GlobalVariables.js" type="module"></script>
     <script src="./scripts/Database.js" type="module"></script>
     <script src="./scripts/Skinning.js" type="module"></script>
     <script src="./scripts/Texture.js" type="module"></script>
@@ -155,7 +154,6 @@
             <div class="panelRow">
                 <button class="slideToggleButton timings">timings</button>
                 <div class="timingPanel panel">
-                    <div class="highlightPoint">_</div>
                 </div>
             </div>
             <div class="panelRow">
