--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="./styles/sidePanel.css">
     <link rel="stylesheet" href="./styles/mobile.css">
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
     <script src="https://bundle.run/buffer@6.0.3"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script>
-    <script src="./deps/cdn.jsdelivr.net_npm_ky_index.js"></script>
-    <script src="./lib/Vibrant.min.js"></script>
-    <script src="./lib/zip-fs-full.js"></script>
-    <script src="./lib/osujs.js"></script>
-    <script src="./lib/lzma_worker.js"></script>
+    <script src="/lib/Vibrant.min.js"></script>
+    <script src="/lib/zip-fs-full.js"></script>
+    <script src="/lib/lzma_worker.js"></script>
+
+    <script src="./lib/osujs.js" type="module"></script>
     <script src="./lib/leb128.js" type="module"></script>
     <script src="./lib/osr-parser.js" type="module"></script>
     <script src="./scripts/GlobalVariables.js" type="module"></script>
