Reimplement Timing Panel

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             </div>
             <div class="panelRow">
                 <button class="slideToggleButton timings">timings</button>
-                <div class="timingPanel panel">
+                <div class="timingPanel panel show">
                 </div>
             </div>
             <div class="panelRow">
