Caching default elements

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <script src="./scripts/HitObjects/ReverseArrow.js" type="module"></script>
     <script src="./scripts/HitObjects/SliderBall.js" type="module"></script>
     <script src="./scripts/HitObjects/SliderTick.js" type="module"></script>
+    <script src="./scripts/HitObjects/SliderEnd.js" type="module"></script>
     <script src="./scripts/HitObjects/Slider.js" type="module"></script>
     <script src="./scripts/HitObjects/Spinner.js" type="module"></script>
     <script src="./scripts/HitObjects/SliderMesh.js" type="module"></script>
