Added show slider end button

--- a/index.html
+++ b/index.html
@@ -274,6 +274,10 @@
                     <input type="checkbox" id="snaking" name="snaking" checked>
                 </div>
                 <div class="selection">
+                    <label for="sliderend">show slider end</label>
+                    <input type="checkbox" id="sliderend" name="sliderend" checked>
+                </div>
+                <div class="selection">
                     <label for="hitAnim">hit animations</label>
                     <input type="checkbox" id="hitAnim" name="hitAnim" checked>
                 </div>
