Initial migration of canvases

--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
             <button id="choose-diff" disabled>Change Difficulty</button>
         </div>
     </div>
-    <div class="timelineContainer">
+    <!-- <div class="timelineContainer">
         <div class="zoom">
             <button class="plus"><img src="/static/plus.png"></button>
             <button class="minus"><img src="/static/minus.png"></button>
         </div>
         <div class="timeline"></div>
-    </div>
+    </div> -->
     <div class="contentWrapper">
         <div id="playerWrapper">
             <div id="playerContainer">
