test bringing back map bg as an HTML element

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
         <div class="timeline"></div>
     </div> -->
     <div class="contentWrapper">
+        <div class="mapBG"></div>
         <dialog class="seekTo">
             <div class="row">
                 <div class="rowLabel">Jump to</div><input id="jumpToTime" type="text">
