--- a/index.html
+++ b/index.html
@@ -15,6 +15,23 @@
     <link rel="stylesheet" href="./styles/sidePanel.css">
     <link rel="stylesheet" href="./styles/mobile.css">
 
+    <script type="text/javascript">
+        if (navigator.userAgent.match(/Android/i) ||
+            navigator.userAgent.match(/webOS/i) ||
+            navigator.userAgent.match(/iPhone/i) ||
+            navigator.userAgent.match(/iPad/i) ||
+            navigator.userAgent.match(/iPod/i) ||
+            navigator.userAgent.match(/BlackBerry/i) ||
+            navigator.userAgent.match(/Windows Phone/i)
+        ) {
+            const urlParams = new URLSearchParams(window.location.search);
+            const beatmapID = /[0-9]+/g.test(urlParams.get("b")) ? urlParams.get("b") : null;
+            const timestamp = /[0-9]+/g.test(urlParams.get("t")) ? urlParams.get("t") : null;
+
+            document.location = `https://beatmap-viewer-web.vercel.app/${beatmapID ? `?b=${beatmapID}` : ""}${timestamp ? `&?t=${timestamp}` : ""}`;
+        }
+    </script>
+
     <script src="https://bundle.run/buffer@6.0.3"></script>
     <script src="/lib/Vibrant.min.js"></script>
     <script src="/lib/zip-fs-full.js"></script>
