Add grid toggle, perfect hit toggle, beatmap hitsound disable

--- a/index.html
+++ b/index.html
@@ -235,6 +235,14 @@
                     <label for="ignoreSkin">ignore beatmap colours</label>
                     <input type="checkbox" id="ignoreSkin" name="ignoreSkin">
                 </div>
+                <div class="selection">
+                    <label for="showGrid">show grid</label>
+                    <input type="checkbox" id="showGrid" name="showGrid">
+                </div>
+                <div class="selection">
+                    <label for="disablePerfect">disable GREATs hit</label>
+                    <input type="checkbox" id="disablePerfect" name="disablePerfect">
+                </div>
             </div>
         </div>
         <div class="section">
@@ -269,6 +277,10 @@
                     <label for="effect">effect volume</label>
                     <div id="effectVal" class="val">25%</div>
                     <input type="range" id="effect" name="effect" min="0" max="0.4" step="0.004" value="0.1">
+                </div>
+                <div class="selection">
+                    <label for="disableBMHS">disable beatmap hitsounds</label>
+                    <input type="checkbox" id="disableBMHS" name="disableBMHS">
                 </div>
             </div>
         </div>
