Added Nightcore and Daycore

--- a/index.html
+++ b/index.html
@@ -304,8 +304,16 @@
                     <input type="checkbox" id="DT" name="DT">
                 </div>
                 <div class="selection">
+                    <label for="NC">nightcore</label>
+                    <input type="checkbox" id="NC" name="NC">
+                </div>
+                <div class="selection">
                     <label for="HT">half time</label>
                     <input type="checkbox" id="HT" name="HT">
+                </div>
+                <div class="selection">
+                    <label for="DC">daycore</label>
+                    <input type="checkbox" id="DC" name="DC">
                 </div>
             </div>
         </div>
