feat(audio): allow background hitsound playing

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
     <script src="./scripts/TimingPanel.js" type="module" defer></script>
     <script src="./scripts/Notification.js" type="module" defer></script>
     <script src="./scripts/SidePanel.js" type="module" defer></script>
+    <script src="./scripts/Record.js" type="module" defer></script>
 </head>
 
 <body>
