--- a/index.html
+++ b/index.html
@@ -259,6 +259,10 @@
                     <div id="bgBlurVal" class="val">0%</div>
                     <input type="range" id="blur" name="blur" min="0" max="20" step="0.2" value="0">
                 </div>
+                <div class="selection">
+                    <label for="video">enable video</label>
+                    <input type="checkbox" id="video" name="video">
+                </div>
             </div>
         </div>
         <div class="section">
