feat(storyboard): initial commit

--- a/index.html
+++ b/index.html
@@ -263,6 +263,10 @@
                     <label for="video">enable video</label>
                     <input type="checkbox" id="video" name="video">
                 </div>
+                <div class="selection">
+                    <label for="storyboard">enable storyboard</label>
+                    <input type="checkbox" id="storyboard" name="storyboard">
+                </div>
             </div>
         </div>
         <div class="section">
