feat(storyboard): animation and etc.

--- a/index.html
+++ b/index.html
@@ -159,12 +159,12 @@
             <div class="description">changing this will trigger a page reload</div>
             <div class="list">
                 <div class="radioSel">
-                    <input type="radio" name="renderer" id="webgpu" value="webgpu">
-                    <label for="webgpu">WebGPU</label>
-                </div>
-                <div class="radioSel">
                     <input type="radio" name="renderer" id="webgl" value="webgl">
                     <label for="webgl">WebGL 2</label>
+                </div>
+                <div class="radioSel">
+                    <input type="radio" name="renderer" id="webgpu" value="webgpu">
+                    <label for="webgpu">WebGPU (Experimental)</label>
                 </div>
                 <div class="radioSel">
                     <input type="radio" name="renderer" id="auto" value="auto" checked>
