feat(download): use Mino instead of Chimu | clearer custom URL guide

--- a/index.html
+++ b/index.html
@@ -185,12 +185,15 @@
                 </div>
                 <div class="radioSel">
                     <input type="radio" name="mirror" id="chimu" value="chimu">
-                    <label for="chimu">Chimu.moe</label>
+                    <label for="chimu">Mino (catboy.best)</label>
                 </div>
-                <div class="radioSel">
-                    <input type="radio" name="mirror" id="custom" value="custom">
+                <div class="radioSel radioSelCustom">
+                    <div class="radioSel">
+                        <input type="radio" name="mirror" id="custom" value="custom">
+                    <label for="custom">Custom URL (replace beatmapset ID with $setId)</label>
+                    </div>
                     <label for="custom">
-                        <input type="text" id="custom-mirror" placeholder="mirror download url format">
+                        <input type="text" id="custom-mirror" placeholder="url here">
                     </label>
 
                 </div>
